visual bug fix now long tweets doesn't go out of bound

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -8,8 +8,8 @@
     
 }
 .headerP{
-    margin-top: 70px;
-    margin-left: 10px;
+    margin: 80px 10px 10px 10px;
+    word-wrap: break-word;
 }
 
 #all_tweets header{
